syntax = "proto3";


package encoder;

service Encoder {
  rpc EncodeText (EncodeTextRequest) returns (EncoderResponse);
  rpc EncodeImage (EncodeImageRequest) returns (EncoderResponse);
}

message EncodeTextRequest {
  string text = 1;
}

message EncodeImageRequest {
  bytes image = 2;
}

message EncoderResponse {
  repeated float embedding = 3;
}
